////////////////////////////////////////////////////////////////////////////////
// Copyright Â© 2022 xx foundation                                             //
//                                                                            //
// Use of this source code is governed by a license that can be found in the  //
// LICENSE file.                                                              //
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package ud;

option go_package = "gitlab.com/elixxir/client/ud";

// Contains the Hash and its Type
message HashFact {
  bytes hash = 1;
  int32 type = 2;
}

// Describes a user lookup result. The ID, public key, and the
// facts inputted that brought up this user.
message Contact {
  bytes userID = 1;
  bytes pubKey = 2;
  string username = 3;
  repeated HashFact trigFacts = 4;
}

// Message sent to UDB to search for users
message SearchSend {
  // PublicKey used in the registration
  repeated HashFact fact = 1;
}

// Message sent from UDB to client in response to a search
message SearchResponse {
  // ID of the session created
  repeated Contact contacts = 1;
  string error = 3;
}

// Message sent to UDB for looking up a user
message LookupSend {
  bytes userID = 1;
}

// Message sent from UDB for looking up a user
message LookupResponse {
  bytes pubKey = 1;
  string username = 2;
  string error = 3;
}
